filehandles non-blocking; it doesn't fix signals or fork or anything.

Add Artur's high/low watermark patches to Wheel::ReadWrite.  This is a
higher level watermark than previous patches, and it's not confined to
a particular driver (which is moot at this point, since there's only
one driver).  It implements high- and low-water callbacks instead of
performing its own flow control.

(!!!) Changed drivers' flush() and put() methods' return values.  They
now return pending octets instead of objects.  ReadWrite's water marks
rely on this to make the marks meaningful.  Updated documentation.


0.0902 2000.02.07
-----------------

Removed an underscore from the last change's version number in
Changes. :)

Abigail found a stupid bug in POE::Session->create's mishandling of
object_states.  Patch received and applied; testcase added to
samples/create.perl; bug fixed.


0.0901 2000.02.07
-----------------

Added InputFilter and OutputFilter to POE::Wheel::ReadWrite's
constructor parameters.  This allows a ReadWrite wheel to use
different disciplines for input and output.

Added &set_input_filter and &set_output_filter to
POE::Wheel::ReadWrite.  Now &set_filter changes both the input and
output filters.  &set_input_filter and &set_output_filter alter
individual filters independent of the other.

Fixed samples/fakelogin.perl to test changing individual filters.

Changed a bunch of diagnostics to print $session->ID instead of
$session.  Debugging will be slower (that's debugging for you), but it
will be also much more friendly.


0.09 2000.01.25
---------------

Updated README with: new mailing list instructions, Windows
compatibility notes, removed POE2 notice.

All promises regarding the 0.09 feature/patch set have been met, and
the Changes since 0.08 are perhaps too long.  Bump the version to 0.09
and prepare for a CPAN release.


0.0808 2000.01.24
-----------------

0.0806 broke Filter::Reference; fix it, and move the inclusion of